--- a/public/db/app.json
+++ b/public/db/app.json
@@ -1,25 +1,25 @@
 {
   "tables": [
     {
-      "status": "Cleaning",
-      "peopleAmount": "5",
+      "status": "Busy",
+      "peopleAmount": "4",
       "maxPeopleAmount": "4",
       "bill": "20",
       "id": "1"
     },
     {
       "status": "Cleaning",
-      "peopleAmount": 0,
+      "peopleAmount": 3,
       "maxPeopleAmount": 3,
       "bill": 0,
       "id": "2"
     },
     {
-      "id": "3",
       "status": "Busy",
       "peopleAmount": 2,
       "maxPeopleAmount": 3,
-      "bill": 45
+      "bill": 45,
+      "id": "3"
     },
     {
       "id": "4",
